[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/interface/atk.png" type="Texture" id=1]
[ext_resource path="res://assets/interface/circle.png" type="Texture" id=2]
[ext_resource path="res://src/battle/combat/interface/ActionMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/interface/skl.png" type="Texture" id=4]
[ext_resource path="res://assets/interface/def.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Close"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Action:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 50 ), Vector2( -70, 50 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Submenu/Def:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 15, 55 ), Vector2( 62.5, 12.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Submenu/Atk:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 20, 55 ), Vector2( 10, -5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Submenu/SKL:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 15, 55 ), Vector2( 80, 65 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Submenu/SKL:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Submenu/Atk:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Submenu/Def:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Action:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -70, 50 ), Vector2( 10, 50 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_on_started"
} ]
}

[node name="ActionMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 479.0
margin_right = -421.0
margin_bottom = 2.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Menu"]
anims/Close = SubResource( 1 )
anims/Open = SubResource( 2 )
anims/Start = SubResource( 3 )

[node name="Submenu" type="Control" parent="Menu"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Def" type="TextureButton" parent="Menu/Submenu"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 15.0
margin_top = 55.0
margin_right = 65.0
margin_bottom = 105.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Atk" type="TextureButton" parent="Menu/Submenu"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 20.0
margin_top = 55.0
margin_right = 70.0001
margin_bottom = 105.0
texture_normal = ExtResource( 1 )
expand = true

[node name="SKL" type="TextureButton" parent="Menu/Submenu"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 15.0
margin_top = 55.0
margin_right = 64.9999
margin_bottom = 105.0
texture_normal = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkillPos" type="Position2D" parent="Menu/Submenu/SKL"]
position = Vector2( 56.0619, 1.46002 )

[node name="Action" type="TextureButton" parent="Menu"]
margin_left = -70.0
margin_top = 50.0
margin_right = -9.99998
margin_bottom = 110.0
hint_tooltip = "Action"
shortcut_in_tooltip = false
texture_normal = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="Menu/Submenu/Def" to="." method="_on_DEF_button_down"]
[connection signal="button_down" from="Menu/Submenu/Atk" to="." method="_on_ATK_button_down"]
[connection signal="button_down" from="Menu/Submenu/SKL" to="." method="_on_SKL_button_down"]
[connection signal="button_down" from="Menu/Action" to="." method="_on_Action_button_down"]
